--- a/views/login.ejs
+++ b/views/login.ejs
@@ -26,7 +26,7 @@
           <label for="password">Mot de passe :</label>
           <input type="password" id="password" name="password" required>
         </div>
-        <button type="submit">Se connecter</button>
+        <a class="cta-button" type="submit">Se connecter</a>
       </form>
             </div>
         </div>
