--- a/views/login.ejs
+++ b/views/login.ejs
@@ -26,8 +26,8 @@
           <label for="password">Mot de passe :</label>
           <input type="password" id="password" name="password" required>
         </div>
-        <a class="cta-button" type="submit">Se connecter</a>
-      </form>
+        <button type="submit" class="unique-submit-btn">Se connecter</button>
+    </form>
             </div>
         </div>
     </section>
