--- a/views/clients-en-attente.ejs
+++ b/views/clients-en-attente.ejs
@@ -50,14 +50,7 @@
                         <% clients.forEach(client => { %>
                             <div class="col-6 client-card">
                                 <div class="toastBox alertingBlue">
-                                    <h2><%= client.nom %> <%= client.prenom %></h2>
-                                    <p><strong>Adresse:</strong> <%= client.adresse %>, <%= client.ville %> <%= client.code_postal %></p>
-                                    <p><strong>Email:</strong> <%= client.email %></p>
-                                    <p><strong>Téléphone:</strong> <%= client.telephone %></p>
-                                    <p><strong>Statut travaux:</strong> <%= client.workStatus %></p>
-                                    <p class="type_renovation"><strong>Type de rénovation:</strong> <%= client.type_renovation %></p>
-                                    <p class="date"><strong>Date:</strong> <%= new Date(client.date).toLocaleDateString('fr-FR') %></p>
-                                    <a href="/client/<%= client.id %>" class="cta-button">Voir la fiche client</a>
+                                    <%- include partials/fiche-client.ejs %>
                                 </div>
                             </div>
                         <% }) %>
