--- a/views/login.ejs
+++ b/views/login.ejs
@@ -26,7 +26,7 @@
           <label for="password">Mot de passe :</label>
           <input type="password" id="password" name="password" required>
         </div>
-        <button type="submit" class="unique-submit-btn">Se connecter</button>
+        <button type="submit" class="cta-button">Se connecter</button>
     </form>
             </div>
         </div>
