--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -22,6 +22,7 @@
                     </div>
                 </div>
             </div>
+            <% if (session.user) { %>
             <div class="column width-3 offset-1">
                 <div class="widget">
                     <ul>
@@ -37,6 +38,7 @@
                     </ul>
                 </div>
             </div>
+            <% } %>
         </div>
     </div>
     <div class="footer-bottom">
